Basic components set up, front page renders (blank) components and pages correctly. Base states added to Calculator component.

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TipCalc React client",
+  "name": "tipcalc_react_client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
